<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.ifsp.trabalho1pdm.Activity3">

    <item
        android:id="@+id/action_enviarMensagem"
        android:iconTint="#D69E9E"
        android:orderInCategory="100"
        android:title="@string/action_enviarMensagem"

        app:showAsAction="never" />

    <item
        android:id="@+id/action_abrirSite"
        android:iconTint="#D69E9E"
        android:orderInCategory="100"
        android:title="@string/action_abrirSite"

        app:showAsAction="never" />

    <item
        android:id="@+id/action_addFake"
        android:iconTint="#D69E9E"
        android:orderInCategory="100"
        android:title="@string/action_addFake"

        app:showAsAction="never" />

    <item
        android:id="@+id/action_voltar"
        android:iconTint="#D69E9E"
        android:orderInCategory="100"
        android:title="@string/action_voltar"

        app:showAsAction="never" />
</menu>
