<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/rowTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:gravity="center">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Confirme"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/lblNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowIdade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/lbltIdade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowCelular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/txtCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowRejeitar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:gravity="center">

            <Button
                android:id="@+id/btnRejeitar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorCrismon"
                android:onClick="onClickRejeitar"
                android:text="@string/Rejeitar" />
        </TableRow>

        <TableRow
            android:id="@+id/rowSalvar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:gravity="center">

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"

                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:background="@color/colorAzulClaro"
                android:onClick="onClickSalvar"
                android:text="@string/Salvar" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>